Bug 37740 - Superfluous icons in soffice.bin
Summary: Superfluous icons in soffice.bin
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: contrib (show other bugs)
Version:
(earliest affected)
3.4.0 Beta2
Hardware: x86 (IA32) Windows (All)
: medium normal
Assignee: ape
URL:
Whiteboard:
Keywords:
: 42980 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-05-30 03:31 UTC by ape
Modified: 2018-03-30 19:50 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
soffice.bin_LibO-3.4.0rc1_05_23_2011 (68.50 KB, application/octet-stream)
2011-05-30 03:31 UTC, ape
Details
The use of 'bin'-icons (RU language) (155.31 KB, image/png)
2011-05-30 07:07 UTC, ape
Details
Icons resource and soffice.bin_3.4.1rc1_2011_06_18 (213.26 KB, application/x-7z-compressed)
2011-06-23 05:01 UTC, ape
Details
LibreOffice 3.4.1-rc2_Win_x86: soffice.bin (102.00 KB, application/octet-stream)
2011-06-23 20:55 UTC, ape
Details
@Michael Meeks: (440.91 KB, application/x-7z-compressed)
2011-06-27 03:16 UTC, ape
Details
Error 'soffice.bin_3.5.0rc2' (63.27 KB, image/png)
2012-01-27 08:26 UTC, ape
Details
The archive contains a modified file 'soffice.bin' (LibO-3.4.5), and icons that are used in this file. (167.10 KB, patch)
2012-01-27 08:36 UTC, ape
Details

Note You need to log in before you can comment on or make changes to this bug.
Description ape 2011-05-30 03:31:23 UTC
Created attachment 47301 [details]
soffice.bin_LibO-3.4.0rc1_05_23_2011

In OS Windows program LibreOffice uses only icons No.1,2,4,6,8,12,14,15,16,17 files 'soffice.bin\res=Icons'. Pages 16x16(px) and 32x32(px) in these icons enough. It is checked up in LibO-3.3.0 and later. The file of version LibO-3.4.0_rc1 (daily, on May, 23 2011) for the test is applied (works in LibO-3.4.0rc2).
Comment 1 Rainer Bielefeld Retired 2011-05-30 05:41:50 UTC
@ape:
So this is some kind of patch that runs LibO without needless Icons?
I have been running [Reproducible] with "LibreOffice 3.4.0RC2  – WIN7  Home Premium  (64bit) German UI [OOO340m1 (Build:12)]" theme "Tango" (and for some moments "Crystal" after I replaced "C:\Program Files (x86)\LibreOffice 3.4\program\soffice.bin by the attachment, wokrs fine (what , of course, is not a systematic test).
Comment 2 Rainer Bielefeld Retired 2011-05-30 05:43:59 UTC
@Tor:
Found you as WIN expert, please feel free to reassign if you do not want to be the assignee.
Comment 3 ape 2011-05-30 06:48:13 UTC
I'm not a programmer, 14 years have used Microsoft Office, faced with this moment, picking up the replacement of MSO. Extracted the icons from 'soffice.bin', numbered them (01-16, 01-32, etc.), re-compile the source file with the changed icons. Run Office and recorded what 'number'-icons where in the UI showing. Since modification 'soffice.bin' appeared.  The icons of this file are only necessary in 'Explorer Title Bar'.
-------
Sorry, my English is very bad.
Comment 4 ape 2011-05-30 07:07:09 UTC
Created attachment 47315 [details]
The use of 'bin'-icons (RU language)
Comment 5 ape 2011-05-30 07:14:19 UTC
Sorry. The 'Quick_start' tool-bar uses these icons also.
Comment 6 Rainer Bielefeld Retired 2011-06-21 10:35:20 UTC
I have been using reporter's Contribution for a while without any problems, also now for "LibreOffice 3.4.1RC1  – WIN7  Home Premium  (64bit) German UI [OOO340m1 (Build:101)]". Until now I did not see any problem.

I could live with 1 MB waste in that file, but if we really can dispose useless contents in such an easy way, we should do it.

@ape:
Is your experience also still positive?
Comment 7 Don't use this account, use tml@iki.fi 2011-06-22 04:21:32 UTC
ape, would you be willing to prepare a patch to the source code then to get rid of the unused icons in the binary (and the icon files, if they aren't used for anything else either)?

Un-assigning from myself as I am not actively working on this.
Comment 8 ape 2011-06-23 01:11:42 UTC
@ Rainer Bielefeld; Tor Lillqvist
I not the programmer. Therefore I delete icons from "libreoffice1.cab\soffice.bin", using programs "WinAce" and "Restorator\ResHacker", after the distribution kit publication.
Check of usage of icons led, having replaced them with others (with numbers on the image, for example "01-1"). A file "soffice.bin" I modify with "LibO-3.3.0rc9" on "LibO-3.4.1rc1_daily_2011_06_18". The modified files don't cause errors by operation of the specified variants "LibreOffice" in all "OS Windows\Server_NT-5" (32-bit: 2000, XP, 2003; 64-bit: XP, 2003). About usage of icons I wrote in comment_4,5; they are used only here. 
Earlier didn't write about it as English language I know badly that very much complicates my dialogue.
Comment 9 ape 2011-06-23 05:01:04 UTC
Created attachment 48329 [details]
Icons resource and soffice.bin_3.4.1rc1_2011_06_18

The archive content:
1. Folder "soffice_bin-3.4.1rc1_2011_06_18" - a file soffice.bin
2. Folder "icons_orig_bin" - icons for files soffice.bin (LibO_3.3.0-3.4.1)
3. Folder "icons_xp_new" - icons which I use in Win_XP. (max_size 96x96; Math, Basic, Web and *.ODM have changed color... Prompt please where problems on this subject are considered.)
Comment 10 Rainer Bielefeld Retired 2011-06-23 06:08:27 UTC
@Tor:
Sounds like an EasyHack. If you agree with my assesment I will nominate this one there.
Please feel free to leave CC after your comment.
Comment 11 ape 2011-06-23 20:55:53 UTC
Created attachment 48363 [details]
LibreOffice 3.4.1-rc2_Win_x86: soffice.bin
Comment 12 Don't use this account, use tml@iki.fi 2011-06-27 00:46:51 UTC
Could be an easy hack, yes. One just needs to find out which .ico file referenced by the relevant .rc file in the LO sources corresponds to icons that can be left out.
Comment 13 Michael Meeks 2011-06-27 01:54:14 UTC
the bigger 'easy hack' is that these icons are duplicated twice once in the 'small' soffice.exe and again in the 'soffice.bin'. The latter are also duplicated in the images.zip file and we just need a little work to load them from there instead - to save several Mb of duplication.
Comment 14 ape 2011-06-27 03:16:18 UTC
Created attachment 48458 [details]
@Michael Meeks:

Icons from 'soffice.exe' are necessary for operation Windows_Explorer. To delete them therefrom it is impossible - display of files in Explorer is broken. 'images.zip' really contains icons unnecessary for operation LibO_Win_x86. I changed a subject of design for WindowsXP-Explorer (soffice.exe; sweb.exe; etc) also deleted a part of icons from 'images.zip' earlier. These changes haven't affected operation LibreOffice 3.3.x-3.4.x. Icons (see - an attachment) are altered, that:
- ODM, WEB and WRITER were identical color;
- Math and Basic had a palette;
- Icons of documents, EXE files and templates were well perceptible even at the size 16x16 px. 
The list remote icons 'images_{all}.zip\res\..':
 mainapp_{16,32,48}_8.png; odb_{16,32,48}_8.png; odf_{16,32,48}_8.png; odg_{16,32,48}_8.png; odm_{16,32,48}_8.png; odp_{16,32,48}_8.png; odt_{16,32,48}_8.png; otg_{16,32,48}_8.png; oth_{16,32,48}_8.png; otp_{16,32,48}_8.png; ots_{16,32,48}_8.png; ott_{16,32,48}_8.png; printadmin_{16,32,48}_8.png
Comment 15 ape 2011-06-27 03:21:34 UTC
The list remote icons 'images_{all}.zip\res\..': ods_{16,32,48}_8.png
Comment 16 Rainer Bielefeld Retired 2011-09-21 05:04:39 UTC
Anything we can do here?
Comment 17 ape 2011-09-21 19:12:17 UTC
Yes, icons I delete in all "win_x86", including "LibO-dev_OOO-350m1". In addition I delete and large icons "Fontwork_aling" (/svx) as the floating window uses only the size 16х16.
Comment 18 ape 2011-09-25 12:52:22 UTC
Besides, now I use a file soffice.exe (~28KB), having only the one first icon. All icons are contained by a file soffice.dll. The file is created "Easy Hack" - a method from a file soffice.bin_OOo-2.4.3. Respective alterations are imported To register Windows. The specified changes don't influence serviceability LibreOffice_3.3.4-3.5.0(OOO-350m1) and change of the program code don't demand.
Comment 19 Andras Timar 2012-01-18 04:09:46 UTC
*** Bug 42980 has been marked as a duplicate of this bug. ***
Comment 20 Andras Timar 2012-01-18 10:19:37 UTC
I fixed this on master (-> LibO 3.6).
http://cgit.freedesktop.org/libreoffice/core/commit/?id=ceb14e0143fb72b34421f6fb81ff1fb1842cb500
Comment 21 ape 2012-01-18 23:04:47 UTC
(In reply to comment #20)
> I fixed this on master (-> LibO 3.6).
> http://cgit.freedesktop.org/libreoffice/core/commit/?id=ceb14e0143fb72b34421f6fb81ff1fb1842cb500

What sise icons will be used?
Comment 22 ape 2012-01-27 08:26:13 UTC
Created attachment 56226 [details]
Error 'soffice.bin_3.5.0rc2'

Errors of icons, icon sizes and number of icons in the file 'soffice.bin' remained in LibO-3.5.0rc2 and LibO-3.4.5. They can be corrected (Easy Hakc) in LibO-3.4.5.
Comment 23 ape 2012-01-27 08:36:39 UTC
Created attachment 56229 [details]
The archive contains a modified file 'soffice.bin' (LibO-3.4.5), and icons that are used in this file.
Comment 24 ape 2012-01-27 09:14:03 UTC
About the file "soffice.bin_LibreOffice-3.5.0rc2" and "EasyHack".
 This file has no resource "RCData". This resource contains a list (numbering) icons. Now you need to insert a blank icon (one page, size 1x1px) instead of icons that are not used.
Comment 25 Don't use this account, use tml@iki.fi 2012-01-27 09:55:23 UTC
It is fairly pointless to attach executable files with edited resources (icons) here. We obviously build LO from source code. Icons in executables are specified in .rc files unless I am mistaken. Patches to those welcome.
Comment 26 Andras Timar 2012-01-27 11:04:37 UTC
(In reply to comment #23)
> Created attachment 56229 [details] [review]
> The archive contains a modified file 'soffice.bin' (LibO-3.4.5), and icons that
> are used in this file.

Scope here is 3.5.0 and higher. 3.4.x branch is deep frozen, only critical fixes should go there.

The errors you showed in the screenshot can be classified into different categories.

1. Wrong icon of Writer/Web. This was due to a typo, fix is in master, review is pending for 3-5 and 3-5-0.
http://cgit.freedesktop.org/libreoffice/core/commit/?id=764674700d35d86890e3538039209f0397015096

2. Enhancement, have icon for Macro editor IDE. Please open a new bug for this one. It should be evaluted, i.e. we need to have it under Linux and Mac, too.

3. Non-issue, i.e. Bez imeni 6 is a Master document, it always had a different application icon, and Na osnove shablona, it always had this icon, so these are not regressions, and I doubt that we need to change them.

So let me close this one. Thanks for your help.