fdo#37740 remove duplicate icons from soffice.bin/soffice.exe

Signed-off-by: Fridrich Štrba <fridrich.strba@bluewin.ch>